changing project structure and adding some feature

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <header>
-    <img src="src/assets/task-management-logo.png">
+    <img src="../assets/icons8-logo-48.png">
     <h1>EasyTask</h1>
     <p>Enterprise-level task management without friction</p>
 </header>
