--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,5 +9,9 @@
     }
   </ul>
 
+  @if(selectedUser){
   <app-task [username]="selectedUser.name"></app-task>
+  } @else {
+  <p id="fallback">Select a user to see their tasks!</p>
+  }
 </main>
