--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,16 +2,21 @@
 
 <main>
   <ul id="users">
-    @for (user of users; track user.id) {
-    <li>
+    <!-- @for (user of users; track user.id) { -->
+    <li *ngFor="let user of users">
       <app-user [user]="user" (select)="onSelectUser($event)" />
     </li>
-    }
+    <!-- } -->
   </ul>
 
-  @if(selectedUser){
-  <app-task [username]="selectedUser.name"></app-task>
-  } @else {
-  <p id="fallback">Select a user to see their tasks!</p>
-  }
+  <!-- @if(selectedUser){ -->
+  <app-task
+    *ngIf="selectedUser; else fallback"
+    [username]="selectedUser!.name"
+  />
+  <!-- } @else { -->
+  <ng-template #fallback>
+    <p id="fallback">Select a user to see their tasks!</p>
+  </ng-template>
+  <!-- } -->
 </main>
