--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
   </ul>
 
   @if(selectedUser){
-  <app-task [username]="selectedUser.name" />
+  <app-tasks [name]="selectedUser.name" />
   } @else {
   <p id="fallback">Select a user to see their tasks!</p>
   }
